--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
